--- a/Externals/NetSpell.SpellChecker/SpellChecker.csproj
+++ b/Externals/NetSpell.SpellChecker/SpellChecker.csproj
@@ -5,6 +5,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
 </Project>
