--- a/Plugins/AutoCompileSubmodules/GitExtensions.Plugins.AutoCompileSubmodules.csproj
+++ b/Plugins/AutoCompileSubmodules/GitExtensions.Plugins.AutoCompileSubmodules.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
