--- a/Plugins/BackgroundFetch/GitExtensions.Plugins.BackgroundFetch.csproj
+++ b/Plugins/BackgroundFetch/GitExtensions.Plugins.BackgroundFetch.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\..\GitExtUtils\Delimiters.cs" Link="Delimiters.cs" />
