--- a/Plugins/CreateLocalBranches/GitExtensions.Plugins.CreateLocalBranches.csproj
+++ b/Plugins/CreateLocalBranches/GitExtensions.Plugins.CreateLocalBranches.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\GitExtUtils\GitExtUtils.csproj">
       <PrivateAssets>build;buildTransitive;compile</PrivateAssets>
