--- a/Plugins/Statistics/GitImpact/GitExtensions.Plugins.GitImpact.csproj
+++ b/Plugins/Statistics/GitImpact/GitExtensions.Plugins.GitImpact.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="..\..\..\GitExtUtils\Delimiters.cs" Link="Delimiters.cs" />
   </ItemGroup>
