Lettura dei bundles dai vari file parameters da poter selezionare come preset di bundles nell'archive;

--- a/GitUI/GitUI.csproj
+++ b/GitUI/GitUI.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft-WindowsAPICodePack-Core" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" />
     <PackageReference Include="JetBrains.Annotations" />
+    <PackageReference Include="YamlDotNet" />
   </ItemGroup>
 
   <ItemGroup>
